Restructuration pour Service Web

--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
+  "name": "ytbrandom",
+  "version": "1.0.0",
+  "description": "Random YouTube Video Finder",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "googleapis": "^154.0.0"
+    "express": "^4.19.2",
+    "node-fetch": "^2.7.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
