Enable ES Modules + detailed logging + fix client script

--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "ytbrandom",
   "version": "1.0.0",
-  "description": "Random YouTube Video Finder",
-  "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "node-fetch": "^2.7.0"
-  },
-  "engines": {
-    "node": "18.x"
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7"
   }
 }
