--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "ytbrandom",
   "version": "1.0.0",
+  "description": "Un site pour regarder des vidéos YouTube aléatoires.",
+  "main": "server.js",
   "type": "module",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^2.6.7"
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
+    "dotenv": "^16.4.5"
   }
 }
